--- a/KmaleonTheWeb/src/app/components/contact/contact.component.scss
+++ b/KmaleonTheWeb/src/app/components/contact/contact.component.scss
@@ -102,8 +102,9 @@ p{
     color: #FFFFFF;
 }
 select{
-    color: #CCC;
+    width: 20%;
+    color: #ffffff;
     font-weight: bold;
-    background-color: rgb(151, 7, 164);
+    background-color: rgb(253, 161, 3);
 
 }
