--- a/KmaleonTheWeb/src/app/components/principal/principal.component.html
+++ b/KmaleonTheWeb/src/app/components/principal/principal.component.html
@@ -2,7 +2,7 @@
 <main>
         
 
-        <img class="banner" src="../../../assets/diferenciales.jpg">
+        <img class="banner" src="../../../assets/banner2.jpg">
         
         <main>
             <section class="principal">
@@ -24,7 +24,7 @@
                 <p>Ubicación exacta en el siguiente mapa</p>
 
                 <div class="mapa-contenido">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34784.869470159!2d-46.65499870427411!3d-23.593248407555798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1ses-419!2sbr!4v1602972945026!5m2!1ses-419!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.439480981666!2d-74.11682648523836!3d4.514538746719774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3fa22e5c55547f%3A0xf58271d7a8e3b533!2sSanta%20Librada%2C%20Usme%2C%20Bogot%C3%A1!5e0!3m2!1ses!2sco!4v1676596500176!5m2!1ses!2sco" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
 
 
@@ -36,19 +36,20 @@
             
                 <div class="contenido-diferenciales">
                     <ul class="lista-diferenciales">
+                        <img class="img-diferencial"  src="../../../assets/diferenciales.jpg" alt="">
                         <li class="items">Atención personalizada</li>
                         <li class="items">Espacios de lujo</li>
                         <li class="items">Localización</li>
                         <li class="items">Profesionales calificados</li>
                         <li class="items">Puntualidad</li>
-                        <li class="items">Limpieza</li>
-                    </ul>
+                        <li class="items">Limpieza</li> 
+                    </ul>  
                 </div>
-                <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                
             </section>
+            
+            <div class="video">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/NqfCmpmfV-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
 
 
             
