--- a/KmaleonTheWeb/src/app/components/products/products.component.scss
+++ b/KmaleonTheWeb/src/app/components/products/products.component.scss
@@ -1,15 +1,10 @@
 
-.copyright{
-    color:#FFFFFF;
-    font-size: 13px;
-    margin:20px;
-}
 .productos{
+    background-color: #bcbcbc;
     width: 940px;
     margin: 0 auto;
     padding: 50px;
 }
-
 
 .productos li{
     display: inline-block;
@@ -51,7 +46,7 @@
 }
 
 ul{
-    display: inline-block;
+    
     vertical-align: top;
     width: 20%;
     margin-right: 15%;
