--- a/KmaleonTheWeb/src/app/components/principal/principal.component.scss
+++ b/KmaleonTheWeb/src/app/components/principal/principal.component.scss
@@ -1,17 +1,18 @@
-/*Aquí inicia el CSS para nuestra home*/
+/*Aquí inician los estilos para nuestro home*/
 .banner{
     width: 100%;
     height: 400px;
-    
-    
 }
 
+
 .principal{
+    background: #CCCCCC;
+    padding: 20px;
     padding: 3em 0;
     background: #FEFEFE;
     width: 940px;
     margin: 0 auto; 
-}
+  }    
 
 .titulo-principal{
     text-align: center;
@@ -19,20 +20,26 @@
     margin: 0 0 1em;
     clear:left;
 }
-
-
+p{
+  font-style: italic;  
+  font-size: 1.5em;
+}
 
 .principal strong{
     font-weight: bold;
 }
 
-
-
 .puestos{
     width: 210px;
     float:left;
-    margin: 0 20px 20px 0;
+    margin: 0 20px 20px 20px;  
+    padding: 9px;
 }
+
+.puestos:hover{
+    background-color: rgb(2, 115, 208);
+}
+
 
 .mapa{
     padding: 3em 0;
@@ -49,35 +56,25 @@
     margin: 0 auto;
 }
 
-.diferenciales{
-    padding: 3em 0;
-    background: #888888;
+
+.img-diferencial{
+    border-radius: 20%;
+    width: 20%;
+    float: right;
+    padding: 10px;
+    margin: 0 650px 20px 20px; 
+}
+.img-diferencial:hover{
+
+    transform: scale(2.0);
+    background: rgb(122, 124, 121);
+    transition:1s
 }
 
-.contenido-diferenciales{
-    width: 640px;
-    margin: 0 auto;
-}
-
-.lista-diferenciales{
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
-}
 
 .items{
     line-height: 1.5;
-}
-
-.items:before{
-    content:"★"
-}
-
-
-.imagen-diferenciales{
-    width: 60%;
-    transition: 400ms;
-    box-shadow: 10px 10px 30px 15px #000000;
+    font-size:xx-large
 }
 
 
@@ -85,59 +82,28 @@
     width: 560px;
     margin: 1em auto;}
 
-    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
-        width: auto;
-    }
-    .lista-diferenciales, .imagen-diferenciales{
-        width: 100%;
+.principal, .mapa-contenido,  .video {
+    width: auto;
     }
 
-    .copyright{
-        color:#FFFFFF;
-        font-size: 13px;
-        margin:20px;
-    }
+.lista-diferenciales{
+        width: 100%;
+        display: inline-block;
+        }
+    
 
 body{
     font-family: 'Montserrat', sans-serif;
 }
 
 
-
-.titulo-principal{
-    padding-left: 30px;
-}
-
-#banner{
-    width:100%;
-}
-
-.principal{
-    background: #CCCCCC;
-    padding: 20px;
-}
-
-.titulo-centralizado{
-    text-align: center;
-}
-
-
-
-#mision{
-    font-size: 20px;
-}
-
 .diferenciales{
-    background: #FFFFFF;
+    background: #b1b1b1f1;
     padding: 30px;
 }
 
 .items{
     font-style: italic;
-}
-
-.imagenDiferenciales{
-    width: 50%;
 }
 
 
