--- a/KmaleonTheWeb/src/app/components/products/products.component.scss
+++ b/KmaleonTheWeb/src/app/components/products/products.component.scss
@@ -1,6 +1,6 @@
 
 .productos{
-    background-color: #bcbcbc;
+    background-color: #e6e6e6;
     width: 940px;
     margin: 0 auto;
     padding: 50px;
