--- a/KmaleonTheWeb/src/app/components/navbar/navbar.component.html
+++ b/KmaleonTheWeb/src/app/components/navbar/navbar.component.html
@@ -6,12 +6,13 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-          <a class="nav-link" href="#">Productos</a>
-          <a class="nav-link">Horarios</a>
-          <a class="nav-link" href="#">Contacto</a>
+          <a routerLink="/products" routerLinkActive="active-link" class="nav-link">Productos</a>
+          <a class="nav-link" href="horarios">Horarios</a>
+          <a class="nav-link" href="contact">Contacto</a>
         </div>
       </div>
     </div>
